Compiler/tests/typing/bad/testfile-field-5.rs

struct S { a: i32 }
fn main() { let x = S { a: 42 }; x.b; }
